unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Segment_type__c.field-meta.xml
<CustomField>
    <fullName>Segment_type__c</fullName>
    <label>Segment type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRM Request</fullName>
            </value>
            <value>
                <fullName>Demographic/Acxiom (Dynamic)</fullName>
            </value>
            <value>
                <fullName>In-Category Shopping/Purchasing (Dynamic)</fullName>
            </value>
            <value>
                <fullName>Keyword</fullName>
            </value>
            <value>
                <fullName>Other- Please Specify</fullName>
            </value>
            <value>
                <fullName>Purchasers of Specific Product (Static)</fullName>
            </value>
            <value>
                <fullName>Shop-A-Like/Audience Extension/Data Science Segment</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
                <isActive>false</isActive>
                <label>Custom</label>
            </value>
            <value>
                <fullName>Data Science</fullName>
                <isActive>false</isActive>
                <label>Data Science</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>