unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Seller_Id__c.field-meta.xml
<CustomField>
    <fullName>Seller_Id__c</fullName>
    <label>Seller Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>