unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Standard_Data_Pull_Requested__c.field-meta.xml
<CustomField>
    <fullName>Standard_Data_Pull_Requested__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Standard Data Pull Requested || CR - 00492715</description>
    <label>Standard Data Pull Requested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1P inventory</fullName>
            </value>
            <value>
                <fullName>1st/Last Page in Session</fullName>
            </value>
            <value>
                <fullName>Abandoners - Category</fullName>
            </value>
            <value>
                <fullName>Abandonment - by product</fullName>
            </value>
            <value>
                <fullName>Abandonment - Post</fullName>
            </value>
            <value>
                <fullName>Brand - Top Brand in Ctgy by Purchase Volume</fullName>
            </value>
            <value>
                <fullName>Brand - Top Brand within Ctgy by Purchase Index</fullName>
            </value>
            <value>
                <fullName>Brand - Top models within brand by Purchases</fullName>
            </value>
            <value>
                <fullName>Brand - Weekly Purchase/Search Trends</fullName>
            </value>
            <value>
                <fullName>Breaks by L5</fullName>
            </value>
            <value>
                <fullName>Carrier Based Insights</fullName>
            </value>
            <value>
                <fullName>Color Purchased</fullName>
            </value>
            <value>
                <fullName>Cross Selling - L1 and L2</fullName>
            </value>
            <value>
                <fullName>Cross Shopping - L1 and L2</fullName>
            </value>
            <value>
                <fullName>Cross Shopping - L3</fullName>
            </value>
            <value>
                <fullName>Dashboard - Sales Velocity</fullName>
            </value>
            <value>
                <fullName>Dashboard - Trends</fullName>
            </value>
            <value>
                <fullName>Day of Week and Time of Day</fullName>
            </value>
            <value>
                <fullName>Demographics</fullName>
            </value>
            <value>
                <fullName>Device Insights</fullName>
            </value>
            <value>
                <fullName>DMA - Top DMAs</fullName>
            </value>
            <value>
                <fullName>eAAT Overlap</fullName>
            </value>
            <value>
                <fullName>Find similar seller names</fullName>
            </value>
            <value>
                <fullName>Frequency Analysis</fullName>
            </value>
            <value>
                <fullName>Keyword - By Index</fullName>
            </value>
            <value>
                <fullName>Keyword - By Volume</fullName>
            </value>
            <value>
                <fullName>Keywords - Top Index by Seller</fullName>
            </value>
            <value>
                <fullName>Marketing - other data</fullName>
            </value>
            <value>
                <fullName>New Buyers</fullName>
            </value>
            <value>
                <fullName>Number of items purchased</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>