unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Client Review</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>CSI Awaiting Sales/AM/Client Feedback</fullName>
            </value>
            <value>
                <fullName>CSI Passed Back to Offshore for Edits</fullName>
            </value>
            <value>
                <fullName>CSI Reviewed and Updated - this is the trigger stage for Accenture or IAC to start</fullName>
            </value>
            <value>
                <fullName>CSI working to complete with existing data pull</fullName>
            </value>
            <value>
                <fullName>CSI working to complete with existing DOMO Dashboard</fullName>
            </value>
            <value>
                <fullName>Data Passed Back to Accenture for Revision</fullName>
            </value>
            <value>
                <fullName>Data Passed back to IAC for Revision</fullName>
            </value>
            <value>
                <fullName>Data Sent to Hypercube Owner for Data Science Creation</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>In CSI queue, IAC wating for details</fullName>
            </value>
            <value>
                <fullName>Ready for IAC Pickup</fullName>
            </value>
            <value>
                <fullName>Waiting for feedback from the team</fullName>
            </value>
            <value>
                <fullName>Data Sent back to CSI</fullName>
            </value>
            <value>
                <fullName>Data Sent back to IAC</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Legal Review</fullName>
            </value>
            <value>
                <fullName>In IAC queue, waiting for Insights input</fullName>
            </value>
            <value>
                <fullName>Ready for Accenture Pickup</fullName>
            </value>
            <value>
                <fullName>Ready for Insights</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Request pushed to Dashboard</fullName>
            </value>
            <value>
                <fullName>Request Cancelled</fullName>
            </value>
            <value>
                <fullName>CSI Reviewed and Updated - IAC Trigger</fullName>
                <isActive>false</isActive>
                <label>CSI Reviewed and Updated - IAC Trigger</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>