unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition:  Tax ID || CR - 00405201</description>
    <label>Tax ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>