unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Tier_3_Budget__c.field-meta.xml
<CustomField>
    <fullName>Tier_3_Budget__c</fullName>
    <label>Tier 3 Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>