unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Timeframe__c</fullName>
    <label>Timeframe</label>
    <type>TextArea</type>
</CustomField>