unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Total_Impressions_Requested__c.field-meta.xml
<CustomField>
    <fullName>Total_Impressions_Requested__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Total Impressions Requested || CR - 00405201</description>
    <label>Total Impressions Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>