unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verification Partner</fullName>
            </value>
            <value>
                <fullName>Ad Serving Fees</fullName>
            </value>
            <value>
                <fullName>Research Study</fullName>
            </value>
            <value>
                <fullName>Creative Fees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>