unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Type_of_Contract__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Contract__c</fullName>
    <label>Type of Contract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NDA</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>MSA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>