unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Types_of_Risk__c.field-meta.xml
<CustomField>
    <fullName>Types_of_Risk__c</fullName>
    <label>Types of Risk</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Protection</fullName>
            </value>
            <value>
                <fullName>IP Usage</fullName>
            </value>
            <value>
                <fullName>Misc Legal</fullName>
            </value>
            <value>
                <fullName>Non-payment</fullName>
            </value>
            <value>
                <fullName>Operational Burden</fullName>
            </value>
            <value>
                <fullName>Overextension of Data Use</fullName>
            </value>
            <value>
                <fullName>Privacy</fullName>
            </value>
            <value>
                <fullName>Unexpected Damages</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>