unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Vendor_Coverage_Requested__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Coverage_Requested__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Vendor Coverage Requested || CR - 00405201</description>
    <label>Vendor Coverage Requested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IAS</fullName>
            </value>
            <value>
                <fullName>Double Verify</fullName>
            </value>
            <value>
                <fullName>MOAT</fullName>
            </value>
            <value>
                <fullName>Placed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>