unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <formula>If( Account__r.RecordType.Name = &#39;Advertiser&#39;, TEXT(Account__r.Industry),
If( Account__r.RecordType.Name = &#39;Agency&#39;, TEXT(Account__r.Industry),
If( Account__r.RecordType.Name = &#39;Seller&#39;, TEXT(Account__r.EBH_MainVertical__c), NULL

)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vertical</label>
    <type>Text</type>
</CustomField>