unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/What_are_client_s_goals_with_eBay__c.field-meta.xml
<CustomField>
    <fullName>What_are_client_s_goals_with_eBay__c</fullName>
    <inlineHelpText>How does the client view eBay and how do they utilize us?</inlineHelpText>
    <label>What are client&#39;s goals with eBay?</label>
    <type>TextArea</type>
</CustomField>