unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/What_are_eBay_s_goals_with_the_client__c.field-meta.xml
<CustomField>
    <fullName>What_are_eBay_s_goals_with_the_client__c</fullName>
    <inlineHelpText>What are we trying to pitch/achieve with the client?</inlineHelpText>
    <label>What are eBay&#39;s goals with the client?</label>
    <type>TextArea</type>
</CustomField>