unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/What_has_been_shared_with_the_client__c.field-meta.xml
<CustomField>
    <fullName>What_has_been_shared_with_the_client__c</fullName>
    <inlineHelpText>This will also help us make sure numbers are consistent; Provide links to previous decks or other background</inlineHelpText>
    <label>What has been shared with the client?</label>
    <type>TextArea</type>
</CustomField>