unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/What_insights_were_found__c.field-meta.xml
<CustomField>
    <fullName>What_insights_were_found__c</fullName>
    <label>What insights were found?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>