unpackaged/main/default/objects/Advertising_Request_Portal__c/recordTypes/Account_Ownership_Change.recordType-meta.xml
<RecordType>
    <fullName>Account_Ownership_Change</fullName>
    <active>true</active>
    <label>Account Ownership Change</label>
</RecordType>