unpackaged/main/default/objects/Advertising_Request_Portal__c/recordTypes/Added_Value.recordType-meta.xml
<RecordType>
    <fullName>Added_Value</fullName>
    <active>true</active>
    <label>Added Value</label>
</RecordType>