unpackaged/main/default/objects/Advertising_Request_Portal__c/recordTypes/AU_CSI_Requests.recordType-meta.xml
<RecordType>
    <fullName>AU_CSI_Requests</fullName>
    <active>true</active>
    <label>AU CSI Requests</label>
</RecordType>