unpackaged/main/default/objects/Advertising_Request_Portal__c/recordTypes/Black_List_Exception.recordType-meta.xml
<RecordType>
    <fullName>Black_List_Exception</fullName>
    <active>true</active>
    <label>Black List Exception</label>
</RecordType>