unpackaged/main/default/objects/Advertising_Request_Portal__c/recordTypes/Brand_Lift_Study.recordType-meta.xml
<RecordType>
    <fullName>Brand_Lift_Study</fullName>
    <active>true</active>
    <label>Ad Effectiveness Study</label>
</RecordType>