unpackaged/main/default/objects/Advertising_Request_Portal__c/recordTypes/Creative_Work_Request.recordType-meta.xml
<RecordType>
    <fullName>Creative_Work_Request</fullName>
    <active>true</active>
    <label>Creative Work Request</label>
</RecordType>