unpackaged/main/default/objects/Advertising_Request_Portal__c/recordTypes/Credit_Check.recordType-meta.xml
<RecordType>
    <fullName>Credit_Check</fullName>
    <active>true</active>
    <label>Credit Check</label>
</RecordType>