unpackaged/main/default/objects/Advertising_Request_Portal__c/recordTypes/Credit_Request.recordType-meta.xml
<RecordType>
    <fullName>Credit_Request</fullName>
    <active>true</active>
    <description>request for commission credit if you didn&#39;t receive it</description>
    <label>Credit Request</label>
</RecordType>