unpackaged/main/default/objects/Advertising_Request_Portal__c/recordTypes/CSI_Requests.recordType-meta.xml
<RecordType>
    <fullName>CSI_Requests</fullName>
    <active>true</active>
    <label>CSI Requests</label>
</RecordType>