unpackaged/main/default/objects/Advertising_Request_Portal__c/recordTypes/eAAT_Segment_Details.recordType-meta.xml
<RecordType>
    <fullName>eAAT_Segment_Details</fullName>
    <active>true</active>
    <label>eAAT Segment Details (DO NOT USE)</label>
</RecordType>