unpackaged/main/default/objects/Advertising_Request_Portal__c/recordTypes/eAAT_Segment_Request.recordType-meta.xml
<RecordType>
    <fullName>eAAT_Segment_Request</fullName>
    <active>true</active>
    <label>Audience Segment Request (eAAT or AP or Lookalike)</label>
</RecordType>