unpackaged/main/default/objects/Advertising_Request_Portal__c/recordTypes/International_Revenue_Credit_Pre_Approval.recordType-meta.xml
<RecordType>
    <fullName>International_Revenue_Credit_Pre_Approval</fullName>
    <active>true</active>
    <description>request for upfront permission for an international opportunity</description>
    <label>International Revenue Credit Pre Approval</label>
</RecordType>