unpackaged/main/default/objects/Advertising_Request_Portal__c/recordTypes/Invoice_Revision.recordType-meta.xml
<RecordType>
    <fullName>Invoice_Revision</fullName>
    <active>true</active>
    <label>Invoice Revision</label>
</RecordType>