unpackaged/main/default/objects/Advertising_Request_Portal__c/recordTypes/Legal_Review.recordType-meta.xml
<RecordType>
    <fullName>Legal_Review</fullName>
    <active>true</active>
    <label>Legal Review</label>
</RecordType>