unpackaged/main/default/objects/Advertising_Request_Portal__c/recordTypes/Makegood.recordType-meta.xml
<RecordType>
    <fullName>Makegood</fullName>
    <active>true</active>
    <label>Makegood</label>
</RecordType>