unpackaged/main/default/objects/Advertising_Request_Portal__c/recordTypes/Media_Plan_Request.recordType-meta.xml
<RecordType>
    <fullName>Media_Plan_Request</fullName>
    <active>true</active>
    <label>Media Plan Request</label>
</RecordType>