unpackaged/main/default/objects/Advertising_Request_Portal__c/recordTypes/Minimum_Campaign_Size_Exception.recordType-meta.xml
<RecordType>
    <fullName>Minimum_Campaign_Size_Exception</fullName>
    <active>true</active>
    <label>Minimum Campaign Size Exception</label>
</RecordType>