unpackaged/main/default/objects/Advertising_Request_Portal__c/recordTypes/Monthly_Discount_Approval.recordType-meta.xml
<RecordType>
    <fullName>Monthly_Discount_Approval</fullName>
    <active>true</active>
    <label>Monthly Discount Approval</label>
</RecordType>