unpackaged/main/default/objects/Advertising_Request_Portal__c/recordTypes/New_Account.recordType-meta.xml
<RecordType>
    <fullName>New_Account</fullName>
    <active>true</active>
    <label>New Account</label>
</RecordType>