unpackaged/main/default/objects/Advertising_Request_Portal__c/recordTypes/Products.recordType-meta.xml
<RecordType>
    <fullName>Products</fullName>
    <active>true</active>
    <label>Edit Price Book</label>
</RecordType>