unpackaged/main/default/objects/Advertising_Request_Portal__c/recordTypes/Rate_Card_Exception.recordType-meta.xml
<RecordType>
    <fullName>Rate_Card_Exception</fullName>
    <active>true</active>
    <label>Rate Card Exception</label>
</RecordType>