unpackaged/main/default/objects/Advertising_Request_Portal__c/recordTypes/Vendor_Fee_Coverage_Request.recordType-meta.xml
<RecordType>
    <fullName>Vendor_Fee_Coverage_Request</fullName>
    <active>true</active>
    <label>Vendor Fee Coverage Request</label>
</RecordType>