unpackaged/main/default/objects/Advertising_Request_Portal__c/validationRules/eBay_Ads_Brandy_Strategy.validationRule-meta.xml
<ValidationRule>
    <fullName>eBay_Ads_Brandy_Strategy</fullName>
    <active>true</active>
    <description>if brand strategy is selected, then key narrative questions field is required</description>
    <errorConditionFormula>AND(

$Setup.byPass__c.byPass_WFRule__c = FALSE,

RecordType.Name = &#39;CSI Requests&#39;,
ISPICKVAL(Brand_Strategy_or_Insights__c, &#39;Brand Strategy&#39;),
ISBLANK( Key_Narrative_Questions__c )  

)</errorConditionFormula>
    <errorDisplayField>Key_Narrative_Questions__c</errorDisplayField>
    <errorMessage>key narrative questions is required for brand strategy requests</errorMessage>
</ValidationRule>