unpackaged/main/default/objects/Advertising_Request_Portal__c/listViews/Account_Ownership_Change.listView-meta.xml
<ListView>
    <fullName>Account_Ownership_Change</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Account__c</columns>
    <columns>New_Sales_Rep__c</columns>
    <columns>Current_Sales_Rep__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Advertising_Request_Portal__c.Account_Ownership_Change</value>
    </filters>
    <label>Account Ownership Change</label>
</ListView>