unpackaged/main/default/objects/Advertising_Request_Portal__c/listViews/Added_Value.listView-meta.xml
<ListView>
    <fullName>Added_Value</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Advertising_Request_Portal__c.Added_Value</value>
    </filters>
    <label>Added Value</label>
</ListView>