unpackaged/main/default/objects/Advertising_Request_Portal__c/listViews/AU_CSI_Requests.listView-meta.xml
<ListView>
    <fullName>AU_CSI_Requests</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Advertising_Request_Portal__c.AU_CSI_Requests</value>
    </filters>
    <label>AU CSI Requests</label>
</ListView>