unpackaged/main/default/objects/Advertising_Request_Portal__c/listViews/AU_IAC_CSI_Priority_Tracker.listView-meta.xml
<ListView>
    <fullName>AU_IAC_CSI_Priority_Tracker</fullName>
    <columns>Country__c</columns>
    <columns>Stank_Ranking__c</columns>
    <columns>Priority__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Name__c</columns>
    <columns>CSI_Team_Member__c</columns>
    <columns>Current_Sales_Rep__c</columns>
    <columns>Date_sent_to_Offshore__c</columns>
    <columns>Expected_Completion_Date__c</columns>
    <columns>Offshore_Input_ETA__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Offshore_Resource__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Advertising_Request_Portal__c.CSI_Requests</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Ready for IAC Pickup,Data Passed back to IAC for Revision</value>
    </filters>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>AU</value>
    </filters>
    <label>AU - IAC CSI Priority Tracker</label>
    <sharedTo>
        <group>eBay_Ads_CSI</group>
        <role>AU</role>
        <role>Advertising_AU</role>
        <role>Advertising_EU</role>
        <role>Advertising_NA_General</role>
        <role>Global</role>
    </sharedTo>
</ListView>