unpackaged/main/default/objects/Advertising_Request_Portal__c/listViews/Black_List_Exception.listView-meta.xml
<ListView>
    <fullName>Black_List_Exception</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Advertiser_Website__c</columns>
    <columns>Business_Justification_MG__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Advertising_Request_Portal__c.Black_List_Exception</value>
    </filters>
    <label>Black List Exception</label>
</ListView>