unpackaged/main/default/objects/Advertising_Request_Portal__c/listViews/Brand_Lift_Study.listView-meta.xml
<ListView>
    <fullName>Brand_Lift_Study</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Advertising_Request_Portal__c.Brand_Lift_Study</value>
    </filters>
    <label>Brand Lift Study</label>
</ListView>